# pytorch-implementations

./: .gitignore  README.en.md  README.md  ResNet50.ipynb  VAE.ipynb  bilstm.ipynb  changelog.md  gan.ipynb  lstm.ipynb  pix2pix.ipynb  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  requirments.extra.txt  seq2seq.ipynb  setup.py  siamese.ipynb  style_transfer.ipynb  tcn.ipynb  textcnn.ipynb  unet.ipynb
image classification/resnet/: ResNet50.ipynb
image generation/dcgan/: dcgan.ipynb
language model/word2vec/: word2vec.ipynb
named entity recognition/bilstm-crf/: bilstm-crf.ipynb
notebooks/: ResNet50.ipynb  VAE.ipynb  acgan.ipynb  ae.ipynb  bam-resnet50.ipynb  bayesian-segnet.ipynb  bilstm-crf-pos.ipynb  bilstm-crf.ipynb  bilstm.ipynb  bisenet-resnet50.ipynb  cbam-resnet50.ipynb  cgan.ipynb  charcnn.ipynb  convnext.ipynb  coord-att-resnet50.ipynb  crnn.ipynb  dae.ipynb  darknet19-448.ipynb  darknet19.ipynb  darknet53-448.ipynb  darknet53.ipynb  dcgan.ipynb  dcnn.ipynb  deeplab.ipynb  deeplabv2-resnet101.ipynb  deeplabv2-vgg16.ipynb  deeplabv2.ipynb  deeplabv3-cascade.ipynb  deeplabv3.ipynb  deeplabv3p-resnet101.ipynb  deit.ipynb  dense_aspp.ipynb  densenet169.ipynb  dfn-resnet101.ipynb  dilation-net.ipynb  dqn.ipynb  dual_attention.ipynb  efficientnet.ipynb  efficientnetv2.ipynb  em-attention.ipynb  (+92 more)
object detection/: yolov1-v2.ipynb  yolov1.ipynb
object detection/yolo/yolov1/: yolov1-v2.ipynb
optical character recognition/crnn/: crnn.ipynb
package/few shot learning/prototypical-network/: prototypical.ipynb
package/image_classification/resnet/: ResNet50.ipynb
package/object detection/: yolov1-revisd.ipynb
package/object_detection/: README.md  requirements.dev.txt  requirements.txt  train.py
package/object_detection/adapter/: adapter.py
package/object_detection/controller/: __init__.py  controller.py  trainer.py
package/object_detection/scripts/: check_voc_gtnum.py  prepare_data_voc.py
package/object_detection/tests/: test_dataset.py  test_detector.py  test_yolov2_loss.py
package/object_detection/utils/: convert_darknet.py  nms.py
package/ocr/datasets/: trdg.py
package/reinforcement learning/DQN/: DQN.ipynb
package/style transfer/neural-style-transfer/: neural-style-transfer.ipynb
semantic segmentation/: fcn.ipynb  unet.ipynb
style transfer/: doodle.ipynb  fast_style.ipynb  style_transfer.ipynb
style transfer/fast-style-transfer/: fast-style-transfer.ipynb
style transfer/neural-doodle/: neural-doodle.ipynb
style transfer/neural-style-transfer/: neural-style-transfer.ipynb
text classification/lstm/: lstm.ipynb
torchlake/: pytest.ini
torchlake/classification_3d/: requirements.txt
torchlake/classification_3d/tests/: test_pointnet.py
torchlake/classification_3d/utils/: plot.py
torchlake/common/: block.py  constants.py  network.py  types.py
torchlake/common/controller/: evaluator.py  recorder.py  trainer.py  weight_manager.py
torchlake/common/datasets/: csv.py  images.py
torchlake/common/helpers/: fuser.py  quantizer.py  tokenizer.py  transform.py  video.py  vocab.py
torchlake/common/metrics/: classification.py
torchlake/common/mixins/: controller.py  dataset.py  network.py
torchlake/common/models/: __init__.py  attention.py  backbone.py  bam.py  cbam.py  channel_shuffle.py  channel_vector.py  cnn_base.py  conv.py  coord_attention.py  ds_conv.py  efficientnet_feature_extractor.py  efficientnetv2_feature_extractor.py  encoder_decoder_base.py  feature_extractor_base.py  flatten.py  highway.py  imagenet_norm.py  imagenet_normalization.py  kernel_pca.py  kmeans.py  l2_norm.py  mobilenet_feature_extractor.py  model_base.py  multikernel_conv.py  position_encoding.py  residual.py  resnet_feature_extractor.py  se.py  (+5 more)
torchlake/graph/: requirements.txt
torchlake/language_model/: requirements.txt
torchlake/object_detection/: README.md  eval.py  predict.py  train.py  yolo_anchors.py
torchlake/ocr/: requirements.txt
torchlake/reinforcement_learning/: requirements.txt
(+764 files in other folders)
