[project]
name = "torchlake"
version = "0.1.2"
description = "implementations of multiple domains of deep learning models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "albumentations>=2.0.7",
  "matplotlib>=3.10.3",
  "numpy>=2.2.6",
  "opencv-contrib-python>=4.11.0.86",
  "opencv-python>=4.11.0.86",
  "pandas>=2.2.3",
  "pydantic>=2.11.4",
  "torch>=2.7.0",
  "torchmetrics>=1.7.1",
  "torchtext>=0.15.1",
  "torchvision>=0.22.0",
  "tqdm>=4.67.1",
]


[project.optional-dependencies]
notebook = [
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torchinfo>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "pytest-html>=4.1.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]

[tool.uv]
no-build-isolation-package = ["torch-scatter"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.setuptools.packages.find]
include = ["torchlake*"]
